# udplink

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GROWTH.md  MAINTAIN.md  README.en.md  README.md  SECURITY.md  conanfile.py  package.json  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: board-bringup-report.md  c-abi-stability-decision.md
.github/workflows/: ci.yml
cmake/: rudp.pc.in  rudpConfig.cmake.in
docs/: README.md  _navbar.md  _sidebar.md  api-mapping.md  arduino-mega-w5100-bringup.md  arduino-mega-w5100-maintainer-run.md  benchmarks.md  board-bringup-report-example.md  c-abi-compatibility.md  c-abi-current-wait-decision-record.md  c-abi-downstream-baseline-decision.md  c-abi-draft.md  c-abi-stability-assessment.md  c-abi-stability-decision-playbook.md  c-abi-stability-gate.md  c-abi-stable-candidate-change-set.md  c-abi-stable-patch-draft.md  c-abi-stable-wording-pack.md  c-abi-surface-v1.json  c-api-quickstart.md  drafts-and-records.md  github-release-v0.1.2.md  guide.html  index.html  issue-drafts-post-v0.1.2.md  platformio-rust-scope.md  pr-c-abi-stable-candidate.md  pr-v0.1.2.md  project-status.md  release-checklist.md  release-cut-v0.1.2.md  release-v0.1.2.md
docs/blog/: mcu-udp-vs-tcp.md
examples/: basic_endpoint.cpp  basic_manager.cpp  socket_peer.cpp  socket_posix.cpp  socket_winsock.cpp
examples/arduino/arduino_udp/: README.md  arduino_udp.ino  platformio.ini
examples/arduino/arduino_udp/src/: main.cpp  manager_repo.cpp  rudp_repo.cpp
examples/c_api/: README.md
examples/c_api/install_consume/: CMakeLists.txt  main.c
examples/embedded/: README.md
examples/esp32/: README.md  esp32_udp.cpp
examples/raspberry_pi/: CMakeLists.txt  README.md  raspberry_pi_udp.cpp
examples/stm32/: README.md  stm32_f4_udp.cpp
include/rudp/: manager.hpp  rudp.hpp  rudp_c.h
scripts/: bundle_board_run_artifacts.py  check_c_abi_docs.py  check_c_abi_surface.py  evaluate_c_abi_gate.py  file_board_run_issue.py  finalize_board_run.py  init_board_run.py  prepare_mega_w5100_run.ps1  release_check.py  render_board_run_report.py  render_c_abi_decision_snapshot.py  run_peer_capture.py  sync_docs_snippets.py  validate_board_run.py
src/: manager.cpp  rudp.cpp  rudp_c.cpp
tests/: bench.cpp  c_api_test.cpp  manager_test.cpp  reliability_test.cpp  self_test.cpp
tests/embedded_compile/: CMakeLists.txt
tests/install_consume/: CMakeLists.txt  main.cpp
tests/install_consume_c/: CMakeLists.txt  main.c
